<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:padding="10dp"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get Detail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/mmh_ip_add" />

        <TextView
            android:id="@+id/tvIp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="0.0.0.0" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/mmh_time" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="0.0.0.0" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/mmh_blutooth_status" />

        <TextView
            android:id="@+id/tvBlutooth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="0.0.0.0" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/mmh_device_name" />

        <TextView
            android:id="@+id/tvDeviceName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="0.0.0.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/mmh_device_version" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="0.0.0.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/mmh_mobile_imei" />

        <TextView
            android:id="@+id/tvImei"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="0.0.0.0" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/mmh_ip_add" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="0.0.0.0" />

    </LinearLayout>

    <Button
        android:id="@+id/btnFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create File"/>

</LinearLayout>